--- a/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Domain/TrialsSystem.UsersService.Domain.csproj
+++ b/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Domain/TrialsSystem.UsersService.Domain.csproj
@@ -10,4 +10,8 @@
     <None Include="..\.editorconfig" Link=".editorconfig" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AggregatesModel\DeviceAggregate\" />
+  </ItemGroup>
+
 </Project>
