--- a/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Api/TrialsSystem.UsersService.Api.csproj
+++ b/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Api/TrialsSystem.UsersService.Api.csproj
@@ -7,12 +7,22 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="11.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="11.2.2" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\TrialsSystem.UsersService.Infrastructure\TrialsSystem.UsersService.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Application\Commands\" />
+    <Folder Include="Application\Validation\" />
   </ItemGroup>
 
 </Project>
