add postman collections, and main documentation

--- a/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Api/TrialsSystem.UsersService.Api.csproj
+++ b/src/UsersManagement/TrialsSystem.UsersService/TrialsSystem.UsersService.Api/TrialsSystem.UsersService.Api.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+	<GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,11 +19,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TrialsSystem.UsersService.Infrastructure\TrialsSystem.UsersService.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Application\Commands\" />
-    <Folder Include="Application\Validation\" />
   </ItemGroup>
 
 </Project>
