--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -5,11 +5,14 @@ services:
     image: mongo
     container_name: mongo
     volumes:
-      - /data/db:/data/db
+      - /data/mongodb:/data/mongodb
   
   sqlserver:
+    container_name: sql-server-db
     image: mcr.microsoft.com/mssql/server:2017-latest
-    
+    volumes:
+      - /data/sqldb:/data/sqldb
+
   cache:
     image: redis:alpine
     container_name: redis
